--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(4, 4, 35);
+    background-color: light blue;
 }
 
 
