--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body{
     margin: 0 400px;
     min-width: 500px;
     max-width: 1000px;
-    background-image: white;
+    background-image: linear-gradient(aqua, rgb(146, 146, 146));
     border-radius: 20px;
     padding: 20px;
 }
